Added get configs with multiple key
